2025-01-25T01:23:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12960450864 # 1084
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-01-25
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3407 / 0 3408 / +0 +1

2025-01-24T01:27:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12941402848 # 1082
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-01-24
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3406 / 0 3407 / +0 +1

2025-01-23T12:38:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12929341326 # 1081
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-01-23
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3405 / 0 3406 / +0 +1

2025-01-20T01:35:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12859275715 # 1074
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-01-20
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3403 / 0 3405 / +0 +2

2025-01-19T12:34:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12853571341 # 1073
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-01-19
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3398 / 0 3403 / +0 +5

2025-01-19T01:40:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12849234333 # 1072