@@ -1,3 +1,9 @@
+2025-01-25T12:34:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12964962928 # 1085
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-01-25
+* notice: query file size: 26208
+* notice: accum prev / next / diff: re vi: 0 3408 / 0 3410 / +0 +2
+
 2025-01-25T01:23:32Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12960450864 # 1084
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-01-25
